# trojan

./: .gitignore  pyproject.toml
src/trojan/: agent.py  analyze_refusals.py  eval_model_response_with_tools.py  inference.py  litellm.py  llm_client.py  parse.py  score.py  tools.py
